--- a/asf.ipynb
+++ b/asf.ipynb
@@ -72,12 +72,14 @@
     "    transformed_polygon = Polygon(transformed_exterior)\n",
     "    return transformed_polygon\n",
     "\n",
-    "def plot_polygons(polygons, bounds, crs=4326, colour='dodgerblue', colours=[]):\n",
+    "def plot_polygons(polygons, bounds, crs=4326, colour='dodgerblue', colours=[], proj='stereo'):\n",
     "    plt.rcParams[\"figure.figsize\"] = [10,8]\n",
     "    # plot the the product geometries on a map\n",
     "    east, west, south, north = bounds\n",
-    "    #ax = plt.axes(projection=cartopy.crs.PlateCarree())\n",
-    "    ax = plt.axes(projection=cartopy.crs.SouthPolarStereo())\n",
+    "    if proj=='stereo':\n",
+    "        ax = plt.axes(projection=cartopy.crs.SouthPolarStereo())\n",
+    "    else:\n",
+    "        ax = plt.axes(projection=cartopy.crs.PlateCarree())\n",
     "    ax.set_extent((east, west, south, north), cartopy.crs.PlateCarree())\n",
     "    ax.add_feature(cartopy.feature.LAND)\n",
     "    ax.add_feature(cartopy.feature.OCEAN)\n",
@@ -146,26 +148,42 @@
     "if search_list:\n",
     "    iw_scene_list = [\n",
     "        # Antarctica - Maitri Station (-70.76683, 11.7308)\n",
-    "        'S1B_IW_SLC__1SSH_20190315T195015_20190315T195045_015369_01CC73_DB8B',\n",
     "        'S1B_IW_SLC__1SSH_20190327T195016_20190327T195045_015544_01D236_9504',\n",
     "        'S1B_IW_SLC__1SSH_20190526T195018_20190526T195048_016419_01EE8D_53BC',\n",
+    "        'S1B_IW_SLC__1SSH_20190315T195015_20190315T195045_015369_01CC73_DB8B',\n",
     "        # Antarctica - Bharati Station (-69.4068, 76.19525)\n",
     "        'S1B_IW_SLC__1SSH_20190223T222639_20190223T222706_015079_01C2E9_1D63',\n",
     "        'S1A_IW_SLC__1SSH_20190605T222724_20190605T222751_027550_031BE1_AD3A',\n",
-    "        # Antarctica - lutzow-holm bay (-69.6901, 39.4502)\n",
-    "        'S1A_IW_SLC__1SSH_20220223T175626_20220223T175653_042043_05021A_BB8E',\n",
-    "        'S1A_IW_SLC__1SSH_20221021T175636_20221021T175703_045543_0571D7_989F',\n",
-    "        # Antarctica - Erebus Ice Tongue (-77.7018, 166.7541) \n",
-    "        'S1A_IW_SLC__1SSH_20190926T124734_20190926T124804_029192_0350B9_FA6B',\n",
-    "        # Antarctica - Heard, McDonald Island (-53.1057, 73.5431) \n",
-    "        'S1A_IW_SLC__1SSH_20230127T142750_20230127T142817_046970_05A22F_17F7',\n",
-    "        'S1A_IW_SLC__1SSH_20230620T142747_20230620T142817_049070_05E69E_0BC7',\n",
-    "        # Antarctica - Brunt Ice Shelf (-75.216667, -25.683333) \n",
-    "        'S1B_IW_SLC__1SSH_20210223T233056_20210223T233124_025740_031194_E7BE',\n",
-    "        'S1B_IW_SLC__1SSH_20210228T035005_20210228T035033_025801_03138F_8CB2',\n",
-    "        # Antarctica - Victoria Land, East Ross Sea (-72.5, 168) \n",
-    "        'S1A_IW_SLC__1SSH_20230120T160153_20230120T160220_046869_059EC6_F364',\n",
-    "        'S1A_IW_SLC__1SSH_20230116T100627_20230116T100655_046807_059CB3_FCC7',\n",
+    "        # Antarctica - Law Dome (-66.163448 113.66396)\n",
+    "        'S1B_IW_SLC__1SSH_20211204T123606_20211204T123635_029875_039105_E7EC',\n",
+    "        'S1A_IW_SLC__1SSH_20211210T123647_20211210T123716_040946_04DCF0_9FBA',\n",
+    "        'S1B_IW_SLC__1SSH_20211216T123605_20211216T123634_030050_03968D_9501',\n",
+    "        # Antarctica - Ross Island (-77.7018, 166.7541)\n",
+    "        'S1A_IW_SLC__1SSH_20211208T124745_20211208T124815_040917_04DBED_5CFF',\n",
+    "        'S1A_IW_SLC__1SSH_20211220T124745_20211220T124815_041092_04E1C2_0475',\n",
+    "        'S1A_IW_SLC__1SSH_20220101T124744_20220101T124814_041267_04E7A2_1DAD',\n",
+    "        # Antarctica - Heard/McDonald Island (-53.1057, 73.543) \n",
+    "        'S1A_IW_SLC__1SSH_20220103T141935_20220103T142005_041297_04E8B4_9B44',\n",
+    "        'S1A_IW_SLC__1SSH_20220108T142747_20220108T142815_041370_04EB2C_4E64',\n",
+    "        'S1A_IW_SLC__1SSH_20220115T141935_20220115T142005_041472_04EE7C_9E3D',\n",
+    "        # Antarctica - Antimeridian (-70, 180) approx - These Failed through hyp3\n",
+    "        'S1A_IW_SLC__1SSH_20220203T153614_20220203T153644_041750_04F7DF_8C3E',\n",
+    "        'S1A_IW_SLC__1SSH_20220122T153615_20220122T153645_041575_04F1EF_9254',\n",
+    "        # Antarctica - Antimeridian (-75, 180) approx\n",
+    "        'S1A_IW_SLC__1SDV_20191028T131928_20191028T131947_029659_0360CA_A1A0',\n",
+    "        'S1A_IW_SLC__1SDH_20161201T131103_20161201T131131_014186_016EB7_F766',\n",
+    "        # Australia - Yaragadee (-29.0474, 115.3461) Descending (Only Avail)\n",
+    "        'S1B_IW_SLC__1SDV_20211201T214143_20211201T214210_029837_038FD8_81C3',\n",
+    "        'S1B_IW_SLC__1SDV_20211201T214208_20211201T214240_029837_038FD8_8B37',\n",
+    "        'S1B_IW_SLC__1SDV_20211213T214143_20211213T214210_030012_039555_8753',\n",
+    "        # Australia - Queensland Forest (-25.533333 147.533333)\n",
+    "        'S1A_IW_SLC__1SDV_20220121T193807_20220121T193834_041563_04F181_5804',\n",
+    "        'S1A_IW_SLC__1SDV_20220202T084138_20220202T084206_041731_04F740_197D',\n",
+    "        'S1A_IW_SLC__1SDV_20220202T084204_20220202T084231_041731_04F740_400F',\n",
+    "        # Australia - SURAT QLD corner reflector (-27.0252,150.5759) - ASCENDING MODE (REQUIRED)\n",
+    "        'S1A_IW_SLC__1SSH_20220116T083314_20220116T083342_041483_04EED2_DB08',\n",
+    "        'S1A_IW_SLC__1SSH_20220104T083315_20220104T083342_041308_04E91B_8E5F',\n",
+    "        'S1B_IW_SLC__1SSH_20211216T123605_20211216T123634_030050_03968D_9501',\n",
     "   ]\n",
     "\n",
     "    ew_scene_list = [\n",
@@ -190,15 +208,93 @@
     "        'S1A_IW_SLC__1SDV_20220123T192213_20220123T192240_041592_04F283_9D0E',\n",
     "    ]\n",
     "\n",
+    "    qld_rainforest_timeseries_list = [\n",
+    "        'S1A_IW_SLC__1SDV_20221220T191402_20221220T191429_046419_058F94_70A0',\n",
+    "        'S1A_IW_SLC__1SDV_20221208T191403_20221208T191430_046244_058998_28A3',\n",
+    "        'S1A_IW_SLC__1SDV_20221126T191403_20221126T191430_046069_05839D_9DD9',\n",
+    "        'S1A_IW_SLC__1SDV_20221102T191403_20221102T191430_045719_0577C9_B76C',\n",
+    "        'S1A_IW_SLC__1SDV_20221009T191404_20221009T191431_045369_056CB2_5D9E',\n",
+    "        'S1A_IW_SLC__1SDV_20220915T191403_20220915T191430_045019_0560F2_B29C',\n",
+    "        'S1A_IW_SLC__1SDV_20220822T191402_20220822T191429_044669_05552A_4729',\n",
+    "        'S1A_IW_SLC__1SDV_20220729T191401_20220729T191428_044319_054A0A_E294',\n",
+    "        'S1A_IW_SLC__1SDV_20220705T191359_20220705T191426_043969_053FA4_EAFD',\n",
+    "        'S1A_IW_SLC__1SDV_20220611T191358_20220611T191425_043619_053532_39C3',\n",
+    "        'S1A_IW_SLC__1SDV_20220424T191355_20220424T191422_042919_051FA1_3965',\n",
+    "        'S1A_IW_SLC__1SDV_20220331T191354_20220331T191421_042569_0513ED_EDBB',\n",
+    "        'S1A_IW_SLC__1SDV_20220307T191354_20220307T191421_042219_050811_3A95',\n",
+    "        'S1A_IW_SLC__1SDV_20220211T191354_20220211T191421_041869_04FC03_7559',\n",
+    "        'S1A_IW_SLC__1SDV_20220130T191354_20220130T191421_041694_04F5F9_1AFD',\n",
+    "        'S1A_IW_SLC__1SDV_20220106T191355_20220106T191422_041344_04EA48_E185',\n",
+    "    ]\n",
+    "\n",
     "\n",
     "    # search the scene list with the specified product type\n",
     "    iw_results = asf.granule_search(iw_scene_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
     "    ew_results = asf.granule_search(ew_scene_list, asf.ASFSearchOptions(processingLevel='GRD_MD'))\n",
     "    sm_results = asf.granule_search(sm_scene_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
     "    qld_cr_results = asf.granule_search(qld_CR_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
+    "    qld_rainforest_results = asf.granule_search(qld_rainforest_timeseries_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
     "    \n",
-    "results = iw_results + ew_results + sm_results\n",
-    "print(len(results))"
+    "    results = iw_results + ew_results + sm_results\n",
+    "    \n",
+    "    print(len(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not search_list:\n",
+    "    # prod = 'GRD_HS' # IW\n",
+    "    # prod = 'GRD_MD' # EW\n",
+    "\n",
+    "    wkt = \"POINT (147.533333 -25.533333)\" # Austraia - Queensland Forest Timeseries\n",
+    "    wkt = \"POINT (152.604 -26.637)\" # Austraia - Queensland Rainforest Forest\n",
+    "\n",
+    "    # prod = 'GRD_HD'\n",
+    "    # prod = 'GRD_MS'\n",
+    "    # prod = 'GRD_FD'\n",
+    "    prod = 'SLC'\n",
+    "\n",
+    "    # acquisition mode\n",
+    "    mode = 'IW'\n",
+    "    #mode = 'EW'\n",
+    "    #mode = ['S1','S2','S3','S4','S5','S6']\n",
+    "\n",
+    "    # start_date = '2021-12-01T00:00:00Z'\n",
+    "    # end_date = '2022-02-28T00:00:00Z'\n",
+    "\n",
+    "    start_date = '2022-01-01T00:00:00Z'\n",
+    "    end_date = '2022-12-31T00:00:00Z'\n",
+    "\n",
+    "    results = asf.search(platform=[asf.PLATFORM.SENTINEL1], \n",
+    "                        intersectsWith=wkt, \n",
+    "                        maxResults=1000, \n",
+    "                        processingLevel=prod,\n",
+    "                        beamMode=mode,\n",
+    "                        start=start_date,\n",
+    "                        end=end_date,\n",
+    "                        #frame=1097\n",
+    "                        )\n",
+    "    search_scenes = []\n",
+    "    for r in reversed(results):\n",
+    "        id_ = r.__dict__['umm']['GranuleUR'].split('-')[0]\n",
+    "        search_scenes.append(id_)\n",
+    "    \n",
+    "    print(len(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r in results[0:1]:\n",
+    "     for i,x in enumerate(r.__dict__['umm']['AdditionalAttributes']):\n",
+    "          print(i,x)"
    ]
   },
   {
@@ -209,13 +305,15 @@
    "source": [
     "scene_locations = {}\n",
     "scene_locations_3031 = {}\n",
-    "for r in results:\n",
+    "for r in reversed(results):\n",
     "    id = r.__dict__['umm']['GranuleUR'].split('-')[0]\n",
-    "    # print(r.__dict__['umm']['GranuleUR'].split('-')[0])\n",
-    "    # print(r.__dict__['umm']['AdditionalAttributes'][1]['Values'],\n",
-    "    #       r.__dict__['umm']['AdditionalAttributes'][17],\n",
-    "    #       r.__dict__['umm']['OrbitCalculatedSpatialDomains'][0]) #[1] #['FRAME_NUMBER']\n",
-    "    # print(r.__dict__['umm']['SpatialExtent'])\n",
+    "    print(r.__dict__['umm']['GranuleUR'].split('-')[0])\n",
+    "    print(r.__dict__['umm']['AdditionalAttributes'][1]['Values'],\n",
+    "          r.__dict__['umm']['AdditionalAttributes'][17],\n",
+    "          r.__dict__['umm']['AdditionalAttributes'][18],\n",
+    "          r.__dict__['umm']['AdditionalAttributes'][29],\n",
+    "          r.__dict__['umm']['OrbitCalculatedSpatialDomains'][0]) #[1] #['FRAME_NUMBER']\n",
+    "    print(r.__dict__['umm']['SpatialExtent'])\n",
     "    points = (r.__dict__['umm']['SpatialExtent']['HorizontalSpatialDomain']\n",
     "              ['Geometry']['GPolygons'][0]['Boundary']['Points'])\n",
     "    points = [(p['Longitude'],p['Latitude']) for p in points]\n",
@@ -226,14 +324,17 @@
     "    scene_locations_3031[id] = poly_3031\n",
     "\n",
     "# save locations to file\n",
-    "# df = pd.DataFrame.from_dict(scene_locations_3031, orient='index')\n",
-    "# df = df.rename(columns = {0:'geometry'})\n",
-    "# gdf = gpd.GeoDataFrame(df, crs=3031, geometry='geometry')\n",
-    "# gdf.to_file('antarctic_test_scene_locations.json')\n",
+    "save = True\n",
+    "if save: \n",
+    "    df = pd.DataFrame.from_dict(scene_locations, orient='index')\n",
+    "    df = df.rename(columns = {0:'geometry'})\n",
+    "    gdf = gpd.GeoDataFrame(df, crs=4326, geometry='geometry')\n",
+    "    gdf.to_file('qld_timeseries_scene_locations.json')\n",
     "\n",
     "#plot\n",
     "colours = ['green' if 'IW' in x else ('blue' if 'EW' in x else 'red') for x in scene_locations.keys()]\n",
-    "plot_polygons(scene_locations.values(), (-180,180,-90,-53), colours=colours)"
+    "plot_polygons(scene_locations.values(), (-180,180,-90,-53), colours=colours)\n",
+    "plot_polygons(scene_locations.values(), (110,160,-45,-8), colours=colours, proj='plate')"
    ]
   },
   {
@@ -279,14 +380,24 @@
    "outputs": [],
    "source": [
     "projects = {\n",
-    "    'antarctica-comparison-iw': iw_scene_list,\n",
+    "    'sar-software-comparison': iw_scene_list,\n",
     "    'antarctica-comparison-ew': ew_scene_list,\n",
     "    'antarctica-comparison-sm': sm_scene_list,\n",
     "    'qld-cr-2022-01': qld_CR_list,\n",
-    "}\n",
+    "    'qld-timeseries-10m-0122-0622' : search_scenes,\n",
+    "    'qld-rainforest-timeseries-20m-2022' : qld_rainforest_timeseries_list,\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# set the proj name\n",
-    "proj_name = 'antarctica-comparison-iw'\n",
-    "proj_name = 'qld-cr-2022-01'\n"
+    "proj_name = 'qld-rainforest-timeseries-20m-2022'\n",
+    "#proj_name = 'qld-cr-2022-01'"
    ]
   },
   {
@@ -357,6 +468,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "failed_jobs"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -372,6 +492,7 @@
    "source": [
     "download_folder = '/data/hyp3-gamma'\n",
     "s3_bucket = 'deant-data-public-dev'\n",
+    "s3_bucket_folder = proj_name\n",
     "push_to_s3 = True\n",
     "delete_after_upload = True"
    ]
@@ -416,7 +537,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for job in succeeded_jobs:\n",
+    "for i,job in enumerate(succeeded_jobs):\n",
+    "    print(f'scene {i+1} of {len(succeeded_jobs)}')\n",
     "    # download\n",
     "    file_list = job.download_files(download_folder)\n",
     "    process_time = job.processing_times\n",
@@ -445,7 +567,7 @@
     "    for f in os.listdir(prod_folder):\n",
     "        f_path = os.path.join(prod_folder, f)\n",
     "        if push_to_s3:\n",
-    "            bucket_folder = f\"hyp3-gamma/glo_30/{crs}/{scene}\"\n",
+    "            bucket_folder = f\"{s3_bucket_folder}/hyp3-gamma/glo_30/{crs}/{scene}\"\n",
     "            object_name = f\"{bucket_folder}/{f}\"\n",
     "            upload_file(f_path,s3_bucket,object_name)\n",
     "    if delete_after_upload:\n",
