--- a/asf.ipynb
+++ b/asf.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Functions"
+    "## Helper functions"
    ]
   },
   {
@@ -107,7 +107,7 @@
     "## Authenticating to the API\n",
     "\n",
     "The SDK will attempt to pull your [NASA Earthdata Login](https://urs.earthdata.nasa.gov/) credentials out of `~/.netrc`\n",
-    "by default, or you can pass your credentials in directly"
+    "by default. Otherwise, you can add your credentials to the  `credentials/credentials_earthdata.yaml` file and the code below will read them in."
    ]
   },
   {
@@ -135,7 +135,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Search"
+    "# Data Search\n",
+    "- There are two main searching methods implemented in this notebook. If the scenes of interest are known, a list can be specified. If the scenes are not known, a search can be made using the asf.search function."
    ]
   },
   {
@@ -144,16 +145,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_list = True\n",
+    "search_list = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Search with list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if search_list:\n",
-    "    iw_scene_list = [\n",
-    "        # Antarctica - Maitri Station (-70.76683, 11.7308)\n",
-    "        'S1B_IW_SLC__1SSH_20190327T195016_20190327T195045_015544_01D236_9504',\n",
-    "        'S1B_IW_SLC__1SSH_20190526T195018_20190526T195048_016419_01EE8D_53BC',\n",
-    "        'S1B_IW_SLC__1SSH_20190315T195015_20190315T195045_015369_01CC73_DB8B',\n",
-    "        # Antarctica - Bharati Station (-69.4068, 76.19525)\n",
-    "        'S1B_IW_SLC__1SSH_20190223T222639_20190223T222706_015079_01C2E9_1D63',\n",
-    "        'S1A_IW_SLC__1SSH_20190605T222724_20190605T222751_027550_031BE1_AD3A',\n",
+    "    \n",
+    "    sar_software_comparison_20m_list = [\n",
+    "    \n",
     "        # Antarctica - Law Dome (-66.163448 113.66396)\n",
     "        'S1B_IW_SLC__1SSH_20211204T123606_20211204T123635_029875_039105_E7EC',\n",
     "        'S1A_IW_SLC__1SSH_20211210T123647_20211210T123716_040946_04DCF0_9FBA',\n",
@@ -172,19 +183,31 @@
     "        # Antarctica - Antimeridian (-75, 180) approx\n",
     "        'S1A_IW_SLC__1SDV_20191028T131928_20191028T131947_029659_0360CA_A1A0',\n",
     "        'S1A_IW_SLC__1SDH_20161201T131103_20161201T131131_014186_016EB7_F766',\n",
-    "        # Australia - Yaragadee (-29.0474, 115.3461) Descending (Only Avail)\n",
-    "        'S1B_IW_SLC__1SDV_20211201T214143_20211201T214210_029837_038FD8_81C3',\n",
-    "        'S1B_IW_SLC__1SDV_20211201T214208_20211201T214240_029837_038FD8_8B37',\n",
-    "        'S1B_IW_SLC__1SDV_20211213T214143_20211213T214210_030012_039555_8753',\n",
     "        # Australia - Queensland Forest (-25.533333 147.533333)\n",
     "        'S1A_IW_SLC__1SDV_20220121T193807_20220121T193834_041563_04F181_5804',\n",
     "        'S1A_IW_SLC__1SDV_20220202T084138_20220202T084206_041731_04F740_197D',\n",
     "        'S1A_IW_SLC__1SDV_20220202T084204_20220202T084231_041731_04F740_400F',\n",
+    "    ] \n",
+    "\n",
+    "    sar_software_comparison_10m_list = [\n",
+    "        # Antarctica - Maitri Station (-70.76683, 11.7308)\n",
+    "        'S1B_IW_SLC__1SSH_20190327T195016_20190327T195045_015544_01D236_9504',\n",
+    "        'S1B_IW_SLC__1SSH_20190526T195018_20190526T195048_016419_01EE8D_53BC',\n",
+    "        'S1B_IW_SLC__1SSH_20190315T195015_20190315T195045_015369_01CC73_DB8B',\n",
+    "        # Antarctica - Bharati Station (-69.4068, 76.19525)\n",
+    "        'S1B_IW_SLC__1SSH_20190223T222639_20190223T222706_015079_01C2E9_1D63',\n",
+    "        'S1A_IW_SLC__1SSH_20190605T222724_20190605T222751_027550_031BE1_AD3A',\n",
+    "        # Australia - Yaragadee (-29.0474, 115.3461) Descending (Only Avail)\n",
+    "        'S1B_IW_SLC__1SDV_20211201T214143_20211201T214210_029837_038FD8_81C3',\n",
+    "        'S1B_IW_SLC__1SDV_20211201T214208_20211201T214240_029837_038FD8_8B37',\n",
+    "        'S1B_IW_SLC__1SDV_20211213T214143_20211213T214210_030012_039555_8753',\n",
     "        # Australia - SURAT QLD corner reflector (-27.0252,150.5759) - ASCENDING MODE (REQUIRED)\n",
     "        'S1A_IW_SLC__1SSH_20220116T083314_20220116T083342_041483_04EED2_DB08',\n",
     "        'S1A_IW_SLC__1SSH_20220104T083315_20220104T083342_041308_04E91B_8E5F',\n",
     "        'S1B_IW_SLC__1SSH_20211216T123605_20211216T123634_030050_03968D_9501',\n",
-    "   ]\n",
+    "    ]\n",
+    "    \n",
+    "    iw_scene_list = []\n",
     "\n",
     "    ew_scene_list = [\n",
     "        'S1A_EW_GRDM_1SDH_20220225T174025_20220225T174129_042072_050315_7C35',\n",
@@ -234,10 +257,15 @@
     "    sm_results = asf.granule_search(sm_scene_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
     "    qld_cr_results = asf.granule_search(qld_CR_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
     "    qld_rainforest_results = asf.granule_search(qld_rainforest_timeseries_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
-    "    \n",
-    "    results = iw_results + ew_results + sm_results\n",
-    "    \n",
-    "    print(len(results))"
+    "    sar_software_comparison_20m_results = asf.granule_search(sar_software_comparison_20m_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
+    "    sar_software_comparison_10m_results = asf.granule_search(sar_software_comparison_10m_list, asf.ASFSearchOptions(processingLevel='SLC'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Search for scenes using asf.search"
    ]
   },
   {
@@ -246,6 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# searh through time\n",
     "if not search_list:\n",
     "    # prod = 'GRD_HS' # IW\n",
     "    # prod = 'GRD_MD' # EW\n",
@@ -282,8 +311,7 @@
     "    for r in reversed(results):\n",
     "        id_ = r.__dict__['umm']['GranuleUR'].split('-')[0]\n",
     "        search_scenes.append(id_)\n",
-    "    \n",
-    "    print(len(results))"
+    "    "
    ]
   },
   {
@@ -292,9 +320,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for r in results[0:1]:\n",
-    "     for i,x in enumerate(r.__dict__['umm']['AdditionalAttributes']):\n",
-    "          print(i,x)"
+    "results = sar_software_comparison_20m_results\n",
+    "print(len(results))\n",
+    "# for r in results[0:1]:\n",
+    "#      for i,x in enumerate(r.__dict__['umm']['AdditionalAttributes']):\n",
+    "#           print(i,x)"
    ]
   },
   {
@@ -303,6 +333,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The code below will pull the location information for each scene\n",
+    "# This data can be saved to json file, or is plotted below\n",
     "scene_locations = {}\n",
     "scene_locations_3031 = {}\n",
     "for r in reversed(results):\n",
@@ -324,7 +356,7 @@
     "    scene_locations_3031[id] = poly_3031\n",
     "\n",
     "# save locations to file\n",
-    "save = True\n",
+    "save = False\n",
     "if save: \n",
     "    df = pd.DataFrame.from_dict(scene_locations, orient='index')\n",
     "    df = df.rename(columns = {0:'geometry'})\n",
@@ -343,6 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Downlod the scenes if required\n",
     "download = False\n",
     "download_folder = 'data'\n",
     "if download:\n",
@@ -380,11 +413,9 @@
    "outputs": [],
    "source": [
     "projects = {\n",
-    "    'sar-software-comparison': iw_scene_list,\n",
-    "    'antarctica-comparison-ew': ew_scene_list,\n",
-    "    'antarctica-comparison-sm': sm_scene_list,\n",
+    "    'sar-software-comparison-20m': sar_software_comparison_20m_list,\n",
     "    'qld-cr-2022-01': qld_CR_list,\n",
-    "    'qld-timeseries-10m-0122-0622' : search_scenes,\n",
+    "    #'qld-timeseries-10m-0122-0622' : search_scenes,\n",
     "    'qld-rainforest-timeseries-20m-2022' : qld_rainforest_timeseries_list,\n",
     "}\n"
    ]
@@ -396,7 +427,7 @@
    "outputs": [],
    "source": [
     "# set the proj name\n",
-    "proj_name = 'qld-rainforest-timeseries-20m-2022'\n",
+    "proj_name = 'sar-software-comparison-20m'\n",
     "#proj_name = 'qld-cr-2022-01'"
    ]
   },
@@ -452,6 +483,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### View which jobs have been completed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -468,20 +506,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "failed_jobs"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download, Unzip and Push to S3"
+    "### Download, Unzip and Push to S3\n",
+    "- The following blocks of code will download the scene from the asf to the local machine. The scene will then be unzipped and the files uploaded to the specified s3 bucket."
    ]
   },
   {
@@ -807,13 +837,6 @@
     "file_list = succeeded_jobs.download_files()\n",
     "file_list"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
