all required scenes

--- a/asf.ipynb
+++ b/asf.ipynb
@@ -201,10 +201,6 @@
     "        'S1B_IW_SLC__1SDV_20211201T214143_20211201T214210_029837_038FD8_81C3',\n",
     "        'S1B_IW_SLC__1SDV_20211201T214208_20211201T214240_029837_038FD8_8B37',\n",
     "        'S1B_IW_SLC__1SDV_20211213T214143_20211213T214210_030012_039555_8753',\n",
-    "        # Australia - SURAT QLD corner reflector (-27.0252,150.5759) - ASCENDING MODE (REQUIRED)\n",
-    "        'S1A_IW_SLC__1SSH_20220116T083314_20220116T083342_041483_04EED2_DB08',\n",
-    "        'S1A_IW_SLC__1SSH_20220104T083315_20220104T083342_041308_04E91B_8E5F',\n",
-    "        'S1B_IW_SLC__1SSH_20211216T123605_20211216T123634_030050_03968D_9501',\n",
     "    ]\n",
     "    \n",
     "    iw_scene_list = []\n",
@@ -224,11 +220,19 @@
     "    ]\n",
     "\n",
     "    qld_CR_list = [\n",
-    "        # Australia - QLD corner reflector (-27.0252,150.5759)\n",
-    "        'S1A_IW_SLC__1SSH_20220104T083315_20220104T083342_041308_04E91B_8E5F',\n",
-    "        'S1A_IW_SLC__1SDV_20220111T192213_20220111T192240_041417_04ECBD_9F3B',\n",
-    "        'S1A_IW_SLC__1SSH_20220116T083314_20220116T083342_041483_04EED2_DB08',\n",
-    "        'S1A_IW_SLC__1SDV_20220123T192213_20220123T192240_041592_04F283_9D0E',\n",
+    "        # Australia - QLD corner reflector (-27.0252,150.5759) - (ASCENDING MODE REQUIRED)\n",
+    "        'S1A_IW_SLC__1SSV_20230312T083311_20230312T083339_047608_05B7B4_9E47',\n",
+    "        'S1A_IW_SLC__1SSH_20230417T083309_20230417T083337_048133_05C96C_990D',\n",
+    "        'S1A_IW_SLC__1SSV_20230523T083310_20230523T083338_048658_05DA2F_A8C3',\n",
+    "        'S1A_IW_SLC__1SSH_20230722T083317_20230722T083345_049533_05F4C7_7C1C',\n",
+    "        'S1A_IW_SLC__1SSV_20230803T083315_20230803T083342_049708_05FA2F_3DCE',\n",
+    "        'S1A_IW_SLC__1SSH_20230908T083317_20230908T083344_050233_060BEC_D8D5',\n",
+    "        'S1A_IW_SLC__1SSV_20231014T083317_20231014T083345_050758_061DE7_512C',\n",
+    "        'S1A_IW_SLC__1SSH_20231119T083317_20231119T083345_051283_062FEC_0B2C',\n",
+    "        'S1A_IW_SLC__1SSV_20231225T083315_20231225T083343_051808_064216_090C',\n",
+    "        # 'S1A_IW_SLC__1SSH_20240106T083314_20240106T083342_051983_064812_8D7E',\n",
+    "        # 'S1A_IW_SLC__1SSV_20240118T083314_20240118T083341_052158_064E01_F2FB',\n",
+    "        # 'S1A_IW_SLC__1SSH_20240130T083313_20240130T083341_052333_0653F0_B544',\n",
     "    ]\n",
     "\n",
     "    qld_rainforest_timeseries_list = [\n",
@@ -250,6 +254,20 @@
     "        'S1A_IW_SLC__1SDV_20220106T191355_20220106T191422_041344_04EA48_E185',\n",
     "    ]\n",
     "\n",
+    "    qld_forest_timeseries_list = [\n",
+    "        'S1A_IW_SLC__1SDV_20220109T084205_20220109T084232_041381_04EB86_4CA4',\n",
+    "        'S1A_IW_SLC__1SDV_20220214T084204_20220214T084231_041906_04FD5B_3E6A',\n",
+    "        'S1A_IW_SLC__1SDV_20220322T084204_20220322T084231_042431_050F45_D995',\n",
+    "        'S1A_IW_SLC__1SDV_20220427T084205_20220427T084232_042956_0520DA_A334',\n",
+    "        'S1A_IW_SLC__1SDV_20220509T084206_20220509T084232_043131_0526B1_B779',\n",
+    "        'S1A_IW_SLC__1SDV_20220602T084207_20220602T084234_043481_053115_3E34',\n",
+    "        'S1A_IW_SLC__1SDV_20220708T084210_20220708T084237_044006_0540C0_A559',\n",
+    "        'S1A_IW_SLC__1SDV_20220813T084212_20220813T084239_044531_055086_7B90',\n",
+    "        'S1A_IW_SLC__1SDV_20220918T084213_20220918T084240_045056_056239_CBF0',\n",
+    "        'S1A_IW_SLC__1SDV_20221024T084214_20221024T084241_045581_057328_A643',\n",
+    "        'S1A_IW_SLC__1SDV_20221129T084213_20221129T084240_046106_0584E7_6C64',\n",
+    "        'S1A_IW_SLC__1SDV_20221223T084212_20221223T084238_046456_0590D9_7BFF',\n",
+    "    ]\n",
     "\n",
     "    # search the scene list with the specified product type\n",
     "    iw_results = asf.granule_search(iw_scene_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
@@ -257,6 +275,7 @@
     "    sm_results = asf.granule_search(sm_scene_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
     "    qld_cr_results = asf.granule_search(qld_CR_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
     "    qld_rainforest_results = asf.granule_search(qld_rainforest_timeseries_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
+    "    qld_forest_results = asf.granule_search(qld_forest_timeseries_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
     "    sar_software_comparison_20m_results = asf.granule_search(sar_software_comparison_20m_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
     "    sar_software_comparison_10m_results = asf.granule_search(sar_software_comparison_10m_list, asf.ASFSearchOptions(processingLevel='SLC'))"
    ]
@@ -279,8 +298,9 @@
     "    # prod = 'GRD_HS' # IW\n",
     "    # prod = 'GRD_MD' # EW\n",
     "\n",
-    "    wkt = \"POINT (147.533333 -25.533333)\" # Austraia - Queensland Forest Timeseries\n",
-    "    wkt = \"POINT (152.604 -26.637)\" # Austraia - Queensland Rainforest Forest\n",
+    "    #wkt = \"POINT (147.533333 -25.533333)\" # Austraia - Queensland Forest Timeseries\n",
+    "    #wkt = \"POINT (152.604 -26.637)\" # Austraia - Queensland Rainforest Forest\n",
+    "    wkt = \"POINT (150.5759 -27.0252)\" # Australia QLD Corner Reflector\n",
     "\n",
     "    # prod = 'GRD_HD'\n",
     "    # prod = 'GRD_MS'\n",
@@ -295,8 +315,8 @@
     "    # start_date = '2021-12-01T00:00:00Z'\n",
     "    # end_date = '2022-02-28T00:00:00Z'\n",
     "\n",
-    "    start_date = '2022-01-01T00:00:00Z'\n",
-    "    end_date = '2022-12-31T00:00:00Z'\n",
+    "    start_date = '2023-01-01T00:00:00Z'\n",
+    "    end_date = '2023-12-31T00:00:00Z'\n",
     "\n",
     "    results = asf.search(platform=[asf.PLATFORM.SENTINEL1], \n",
     "                        intersectsWith=wkt, \n",
@@ -305,13 +325,14 @@
     "                        beamMode=mode,\n",
     "                        start=start_date,\n",
     "                        end=end_date,\n",
-    "                        #frame=1097\n",
+    "                        frame= 1088 #1097\n",
     "                        )\n",
     "    search_scenes = []\n",
     "    for r in reversed(results):\n",
     "        id_ = r.__dict__['umm']['GranuleUR'].split('-')[0]\n",
     "        search_scenes.append(id_)\n",
-    "    "
+    "    \n",
+    "    print(len(results))"
    ]
   },
   {
@@ -320,11 +341,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = sar_software_comparison_20m_results\n",
-    "print(len(results))\n",
+    "results = qld_cr_results\n",
+    "#print(len(results))\n",
     "# for r in results[0:1]:\n",
     "#      for i,x in enumerate(r.__dict__['umm']['AdditionalAttributes']):\n",
-    "#           print(i,x)"
+    "#           print(i,x)\n",
+    "# for i,x in enumerate(search_scenes):\n",
+    "#     if (i%3 == 0) or (i==10) or (i==len(search_scenes)-1):\n",
+    "#         print(x)"
    ]
   },
   {
@@ -366,7 +390,8 @@
     "#plot\n",
     "colours = ['green' if 'IW' in x else ('blue' if 'EW' in x else 'red') for x in scene_locations.keys()]\n",
     "plot_polygons(scene_locations.values(), (-180,180,-90,-53), colours=colours)\n",
-    "plot_polygons(scene_locations.values(), (110,160,-45,-8), colours=colours, proj='plate')"
+    "plot_polygons(scene_locations.values(), (110,160,-45,-8), colours=colours, proj='plate')\n",
+    "\n"
    ]
   },
   {
@@ -414,9 +439,9 @@
    "source": [
     "projects = {\n",
     "    'sar-software-comparison-20m': sar_software_comparison_20m_list,\n",
-    "    'qld-cr-2022-01': qld_CR_list,\n",
-    "    #'qld-timeseries-10m-0122-0622' : search_scenes,\n",
+    "    'sar-software-comparison-10m': qld_CR_list,\n",
     "    'qld-rainforest-timeseries-20m-2022' : qld_rainforest_timeseries_list,\n",
+    "    'qld-forest-timeseries-20m-2022' : qld_forest_timeseries_list,\n",
     "}\n"
    ]
   },
@@ -427,7 +452,7 @@
    "outputs": [],
    "source": [
     "# set the proj name\n",
-    "proj_name = 'sar-software-comparison-20m'\n",
+    "proj_name = 'sar-software-comparison-10m'\n",
     "#proj_name = 'qld-cr-2022-01'"
    ]
   },
@@ -447,8 +472,9 @@
     "                                    include_rgb=True,  #include rgb img in final product\n",
     "                                    include_scattering_area=True, #include scat area in final product\n",
     "                                    name=proj_name,\n",
-    "                                    resolution=20,\n",
-    "                                    dem_name='copernicus')\n",
+    "                                    resolution=10,\n",
+    "                                    dem_name='copernicus',\n",
+    "                                    radiometry='gamma0')\n",
     "print(rtc_jobs)\n"
    ]
   },
@@ -503,6 +529,20 @@
     "print(f'Number of succeeded jobs: {len(succeeded_jobs)}')\n",
     "failed_jobs = rtc_jobs.filter_jobs(succeeded=False, running=False, failed=True)\n",
     "print(f'Number of failed jobs: {len(failed_jobs)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "succeeded_jobs\n",
+    "download_jobs = []\n",
+    "for j in succeeded_jobs:\n",
+    "    print(j.job_parameters['radiometry'])\n",
+    "    if j.job_parameters['radiometry'] == 'gamma0':\n",
+    "        download_jobs.append(j)"
    ]
   },
   {
@@ -567,8 +607,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i,job in enumerate(succeeded_jobs):\n",
-    "    print(f'scene {i+1} of {len(succeeded_jobs)}')\n",
+    "#download_jobs = succeeded_jobs\n",
+    "for i,job in enumerate(download_jobs):\n",
+    "    print(f'scene {i+1} of {len(download_jobs)}')\n",
     "    # download\n",
     "    file_list = job.download_files(download_folder)\n",
     "    process_time = job.processing_times\n",
